@startuml DDD

!theme crt-green
skinparam nodesep 150
hide empty members
left to right direction

package "<<agr SystemUser>>"{
    class SystemUser<<entity>><<root>>{}
    class UserName<<vo>>{}
    class UserPassword<<vo>>{}

    SystemUser --> "1" UserName
    SystemUser --> "1" UserPassword
}

package "<<agr SharedBoard>>"{
    class SharedBoard<<entity>><<root>>{}
    class SharedBoardTitle<<vo>>{}
    class CreationTimestamp<<vo>>{}
    class SharedBoardState<<vo>><<enum>>{}

    SharedBoard --> "1" SharedBoardState
    SharedBoard --> "1" SharedBoardTitle
    SharedBoard --> "1" CreationTimestamp
}

package "<<agr SharedBoardParticipation>>"{
    class SharedBoardParticipation<<entity>><<root>>{}
    class UserPermission<<vo>><<enum>>{}
    note top: This tells what permission the user contains in a specific SharedBoard
    class UserStatus <<vo>><<enum>>{}
    note right: This tells if the user is a guest or a participant

    SharedBoardParticipation --> UserPermission
    SharedBoardParticipation --> UserStatus
    SharedBoard "1" <-- SharedBoardParticipation
    SystemUser "1" <-- SharedBoardParticipation
}


@enduml